Use .env for sensitive configuration and ignore .env file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ __pycache__/
 
 # Ignorar carpetas Git internas (por si acaso copiaste alguna)
 **/.git/
+
+# Ignore environment variables file
+.env
