--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ docopt==0.6.2
 einops==0.8.1
 encodec==0.1.1
 exceptiongroup==1.2.2
-faster-whisper==1.1.1
 filelock==3.18.0
 Flask==3.1.0
 flatbuffers==25.2.10
@@ -103,7 +102,6 @@ nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 onnxruntime==1.21.1
-openai==1.76.0
 packaging==25.0
 pandas==1.5.3
 pillow==11.2.1
@@ -157,6 +155,7 @@ trainer==0.0.36
 transformers==4.51.3
 triton==3.3.0
 TTS==0.22.0
+vosk==0.3.45
 typeguard==4.4.2
 typer==0.15.2
 typing-inspection==0.4.0
